# pylightcurve

./: .coveragerc  .gitignore  .travis.yml  LICENSE  MANIFEST.in  README.md  TRANSIT_MODEL_F_VEC.py  __init__.py  animation.py  claret.py  database.pickle  example.py  fcmodel.py  flux.py  flux_claret.py  flux_linear.py  flux_quad.py  flux_sqrt.py  lc.py  mcmc.py  mcmc_example.py  models.py  position.py  pylightcurve_quad.py  pylightcurve_tools.py  pyproject.toml  requirements.txt  setup.py  tasks.py  transit_models.py
claret.tables/: TABLE12  TABLE13  TABLE14  TABLE15  TABLE17  TABLE19  TABLE20  TABLE28  TABLE29  TABLE32  TABLE34  TABLE4  TABLE40  TABLE41  TABLE43  TABLE44  TABLE5  TABLE6  TABLE7  TABLE8  readme
example/: example.py
examples/: example.py
ld_coeffs/: claretinfo.txt
mcmc_fit/: model_lc.txt  result.txt  resultlists.txt
notebooks/: 1_the_planet_class.ipynb  3_core_calculations.ipynb
pylightcurve/: _0database.pickle  _0errors.py  _0imports.py  _1databases.py  __author__.txt  __author_email__.txt  __databases__.pickle  __databases__.py  __databases_setup__.py  __description__.txt  __init__.py  __url__.txt  analysis_distribution_one_d.py  analysis_distribution_two_d.py  analysis_emcee_fitting.py  analysis_gauss_numerical_integration.py  analysis_optimisation.py  cache.py  catalogues_celestial_sphere.py  catalogues_oec.py  clablimb.py  counter.py  cylc.c  cylc.pyx  cylc_menu.c  database_handling.py  database_v1.pickle  databases.py  emcee_fitting.py  ephem.py  errors.py  exoplanet_flux.py  exoplanet_lc.py  exoplanet_lc_fitting.py  exoplanet_orbit.py  (+18 more)
(+179 files in other folders)
