[tool.poetry]
name = "pylightcurve"
version = "4.0.3"
description = "A python package for modeling and analysing transit light-curves."
authors = ["Angelos Tsiaras <aggelostsiaras@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.20.0"
emcee = "^3.1.4"
astropy = "^5.0.0"
scipy = "^1.10.0"
pyyaml = "^6"
matplotlib = "^3.8.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.1"
pytest-runner = "^6.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
